switch Rmd to quarto syntax in 101

--- a/101-workflows-organising-your-work.qmd
+++ b/101-workflows-organising-your-work.qmd
@@ -1,6 +1,7 @@
 # Organising your work {#workflows-organising-your-work}
 
-```{r, results='asis', echo=FALSE}
+```{r organising-your-work-setup}
+#| results: 'asis'
 source("_common.R")
 status("polishing")
 ```
@@ -17,22 +18,20 @@ become a successful data scientist.
 
 First, let's consider why we want to provide our data science projects with some sense of structure and organization.
 
-As a data scientist you'll never work alone. Within a single project you'll interact with a whole range of other people. This might be a project manager, one or more business stakeholders or a variety of subject matter experts.These experts might be trained as sociologists, chemists, or civil servants depending on the exact type of data science work that you're doing. 
+As a data scientist you'll never work alone. Within a single project you'll interact with a whole range of other people. This might be a project manager, one or more business stakeholders or a variety of subject matter experts. These experts might be trained as sociologists, chemists, or civil servants depending on the exact type of data science work that you're doing. 
 
-To then get your project put into use and working at scale you'll have to
-collaborate with data engineers. You'll also likely work closely with other data scientists. For smaller projects this might be to act as reviewers for one another's work. For larger projects working collaboratively will allow you to tackle larger challenges. These are the sorts of project that wouldn't be feasible alone, because of the inherent limitations on the time and skill of any one individual person. 
+To then get your project put into use and working at scale you'll have to collaborate with data engineers. You'll also likely work closely with other data scientists. For smaller projects this might be to act as reviewers for one another's work. For larger projects working collaboratively will allow you to tackle larger challenges. These are the sorts of project that wouldn't be feasible alone, because of the inherent limitations on the time and skill of any one individual person. 
 
 Even if you work in a small organization, where you're the only data scientist, then adopting a way of working that's focused on collaborating will pay dividends over time. This is because when you inevitably return to the project that you're working on in several weeks or months or years into the future you'll have forgotten almost everything of what you did the first time around. You'll also have forgotten why you made the decisions that you did and what other potential options there were that you didn't take. 
 
 This is exactly like working with a current colleague who has shoddy or poor working practices. Nobody wants to be that colleague to somebody else, let alone to their future self. Even when working alone, treating your future self as a current collaborator (and one that you want to get along well with) makes you a kind colleague and a pleasure to work with. 
 
-
 The aim of this week is to provide you with a guiding structure on how you organize and perform your work. None of this is going to be particularly difficult or onerous. However it will require a bit more effort up front and daily discipline. Like with flossing, the daily effort required is not large but the benefits will compound over time. 
 
-You'll get more done by wasting less time staring quizzically at a mess of
-folders and indecipherable code. You'll also get a reputation as someone who's well  organized and good to work with. This promotes better professional relationships and greater levels of trust within your team. These can then, in turn, tead to you working on more exciting and more impactful projects in the future. 
+You'll get more done by wasting less time staring quizzically at a mess of folders and indecipherable code. You'll also get a reputation as someone who's well  organized and good to work with. This promotes better professional relationships and greater levels of trust within your team. These can then, in turn, tead to you working on more exciting and more impactful projects in the future. 
 
 ## An R Focused Approach
+
 The structures and workflows that are recommend here and throughout the rest of this module are focused strongly on a workflow that predominantly uses R, markdown and LaTeX. 
 
 Similar techniques, code and software can achieve the same results that I show you here when coding in Python or C, or when writing up projects in Quarto or some other markup language. Similarly, different organizations have their own variations on these best practices that we'll go through together. Often organisations will have extensive guidance on these topics. 
@@ -52,7 +51,7 @@ Golden Rule:
 This is worth repeating. Every single project that you work on should be self-contained and live in a single directory. An analogy here might be having a separate ring-binder folder for each of your modules on a degree program. 
 
 
-```{r 1-project-1-directory-image, echo = FALSE, out.width="80%"}
+```{r 1-project-1-directory-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-1.png"
 knitr::include_graphics(path = image_path)
 ```
@@ -84,7 +83,7 @@ Don't worry if you haven't heard of some of these terms already. We're going to 
 A project is said to be portable if it can be easily moved without breaking. 
 
 
-```{r protability-image, echo = FALSE, out.width="80%"}
+```{r portability-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-2.png"
 knitr::include_graphics(path = image_path)
 ```
@@ -123,8 +122,7 @@ That's perhaps a bit of an extreme example, but it emphasizes the importance of 
 
 ### IDE Friendly 
 
-Our final desirable property is that we'd like our projects to play nicely
-with integrated development environments.
+Our final desirable property is that we'd like our projects to play nicely with integrated development environments.
 
 When you're coding document and writing your data science projects it'd be possible for you to work entirely in either a plain text editor or typing code directly at the command line. While these approaches to a data science workflow have the benefit of simplicity, they also expect a great deal from you as a data scientist. 
 
@@ -146,17 +144,16 @@ Every project is going to be slightly different and some might require slight al
 
 One final caveat before we get started: companies and businesses will many times have a house style how to write and organize your code or projects. If that's the case, then follow the style guide that your business or company uses. The most important thing here is to be consistent at both an individual level and across the entire data science team. It's this consistency that reaps the benefits. 
 
-
 Okay, so imagine now that you've been assigned a shiny new project and have created a single directory in which to house that project. Here we've, quite imaginatively, called that directory `exciting-new-project`. What do we populate this folder with? 
 
-```{r exciting-new-project-image, echo = FALSE, out.width="80%"}
+```{r exciting-new-project-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-3.png"
 knitr::include_graphics(path = image_path)
 ``` 
 
 In the rest of this video, I'll define the house-style for organizing the root directory of your data science projects in this module. 
 
-```{r project-structure-image, echo = FALSE, out.width="80%"}
+```{r project-structure-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-4.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -166,19 +163,16 @@ Within the project directory there will be some subdirectories, which you can  t
 
 ### README.md
 
-```{r readme-image, echo = FALSE, out.width="80%"}
+```{r readme-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-5.png"
 knitr::include_graphics(path = image_path)
 ``` 
 
 Let's begin with the readme file. This gives a brief introduction to your project and  gives information on what the project aims to do. The readme file should describe how to get started using the project and how to contribute to its development. 
 
-The readme is written either in a plain text format so `readme.txt` or in markdown
-format `readme.md`. The benefit of using markdown is that it allows some light
-formatting such as sections headers and lists using plain text characters. 
-Here you can see me doing that by using hashes to mark out first and second level headers and using bullet points for a unnumbered list. Whichever format you use, the readme file for your project is always stored in the root directory and is typically named in all uppercase letters. 
+The readme is written either in a plain text format so `readme.txt` or in markdown format `readme.md`. The benefit of using markdown is that it allows some light formatting such as sections headers and lists using plain text characters. Here you can see me doing that by using hashes to mark out first and second level headers and using bullet points for a unnumbered list. Whichever format you use, the readme file for your project is always stored in the root directory and is typically named in all uppercase letters. 
 
-The readme file should be the first thing that someone who's new to your project reads. By placing the readme in the root directory and capitalising the file name you are increase the visibility of this file and increae the chances of this actually happening. 
+The readme file should be the first thing that someone who's new to your project reads. By placing the readme in the root directory and capitalising the file name you are increase the visibility of this file and increase the chances of this actually happening. 
 
 An additional benefit to keeping the readme in the root directory of your project is that code hosting services like GitHub, GitLab or BitBucket will display the contents of that readme file next to the contents of your project. Those services will also nicely format any markdown that you use for you in your readme file. 
 
@@ -188,8 +182,7 @@ When writing the readme, it can be useful to imaginge that you are writing this 
 
 let's take a quick aside to see in more detail what should be covered within a readme file.
 
-A readme we should include the name of the project, which should be self-explanatory (so nothing like my generic choice of `exciting-new-project`). The readme should also give the project status, which is just a couple of sentences to say whether your project is still under development, the version oft the current release or, on the other end of the project life-cycle, if the project is being deprecated or
-closed. 
+A readme we should include the name of the project, which should be self-explanatory (so nothing like my generic choice of `exciting-new-project`). The readme should also give the project status, which is just a couple of sentences to say whether your project is still under development, the version oft the current release or, on the other end of the project life-cycle, if the project is being deprecated or closed. 
 
 Following this, we should also include a description of your project. This will state the purpose of your work and to provide, or link to, any additional context or references that visitors aren't assumed to be familiar with. 
 
@@ -197,21 +190,17 @@ If your project involves code or depends on other packages then you should give 
 
 It's also a good practice to include some simple examples of how to use the code within your project an the expected results, so that new users can confirm that everything is working on their local instance. Keep the examples as simple and minimal as you can so that new users
 
-For longer or more complicated examples that aren't necessary in this short introductory document you can add links to those in the readme and explain them
-in detail elsewhere. 
+For longer or more complicated examples that aren't necessary in this short introductory document you can add links to those in the readme and explain them in detail elsewhere. 
 
-There should ideally be a short description of how people can report issues with the project and also how people can get started in resolving those issues or extend the
-project in some way. 
+There should ideally be a short description of how people can report issues with the project and also how people can get started in resolving those issues or extend the project in some way. 
 
-That leads me on to one point that I've forgotten to list here. There there should be a section listing the authors of the work and the license in which under which it's
-distributed. This is to give credit to all the people who've contributed to
-your project and the license file then says how other people may use your work. The license declates how other may use your project and whether they have to give direct
+That leads me on to one point that I've forgotten to list here. There there should be a section listing the authors of the work and the license in which under which it's distributed. This is to give credit to all the people who've contributed to your project and the license file then says how other people may use your work. The license declares how other may use your project and whether they have to give direct
 attribution to your work in any modifications that they use. 
 
 
 ### data 
 
-```{r data-image, echo = FALSE, out.width="80%"}
+```{r data-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-7.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -220,7 +209,7 @@ Moving back to our project structure, next we have the data directory.
 
 The data directory will have two subdirectories one called `raw` and one called `derived`. All data that is not generate as part of your project is stored in the `raw` subdirectory. To ensure that a project is reproducible, data in the Raw folder should never be edited or modified. 
 
-```{r data-raw-image, echo = FALSE, out.width="80%"}
+```{r data-raw-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-8.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -231,7 +220,7 @@ The text file `metadata.txt` is a plain text file explaining the contents and in
 
 The raw data likely isn't going to be in a form that's amenable to analyzing straight away. To get the data into a more pleasant form to work, it will require some data manipulation and cleaning. Any manipulation or cleaning that is applied should be well documented and the resulting cleaned files saved within the `derived` data directory.
 
-```{r data-derived-image, echo = FALSE, out.width="80%"}
+```{r data-derived-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-12.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -240,8 +229,7 @@ In our exciting new project, we can see the clean versions of the previous data 
 
 ### src
 
-
-```{r src-image, echo = FALSE, out.width="80%"}
+```{r src-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-16.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -250,44 +238,37 @@ The `src` or source directory contains all the source code for your project. Thi
 
 Here we've saved each function in its own R script and, in this project, we've used subdirectories to organise these by their use case. We've got two functions used in data cleaning: the first replaces `NA` values with a given value, the second replaces these by the mean of all non-missing values.
 
-We also have three helper functions: the first two calculate rolling mean and the
-geometric mean of a given vector, the third is a function that scrapes the
-web data we saw in the derived data subdirectory. 
+We also have three helper functions: the first two calculate rolling mean and the geometric mean of a given vector, the third is a function that scrapes the web data we saw in the derived data subdirectory. 
 
 
 ### tests
 
-```{r tests-image, echo = FALSE, out.width="80%"}
+```{r tests-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-12.png"
 knitr::include_graphics(path = image_path)
 ``` 
 
 Moving on then to the tests directory. The structure of this directory mirrors that of the source directory. Each function file has its own counterpart file of tests. 
 
-These test files provide example sets of inputs and the expected outputs for each
-function. The test files are used to check edge cases of a function or to assure
-yourself that you haven't broken anything while fixing some small bug or adding new capabilities to that function. 
+These test files provide example sets of inputs and the expected outputs for each function. The test files are used to check edge cases of a function or to assure yourself that you haven't broken anything while fixing some small bug or adding new capabilities to that function. 
 
 ### analyses
 
-```{r analyses-image, echo = FALSE, out.width="80%"}
+```{r analyses-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-23.png"
 knitr::include_graphics(path = image_path)
 ``` 
 
-The analyses directory contains what you probably think of as the bulk of your
-data science work. It's going to have one subdirectory for each major analysis that's performed within your project and within each of these there might be a series of steps that we collect into separate scripts. 
+The analyses directory contains what you probably think of as the bulk of your data science work. It's going to have one subdirectory for each major analysis that's performed within your project and within each of these there might be a series of steps that we collect into separate scripts. 
 
-The activity performed at each step is made clear by the name of each script, as is the order in which we're going to perform these steps. Here we can see the scripts used for the 2021 annual report. First is a script used to take the raw monthly receipts and produce the _cleaned_ version of the same data set that we saw earlier. 
-This is followed by a trend analysis of this cleaned data set. 
+The activity performed at each step is made clear by the name of each script, as is the order in which we're going to perform these steps. Here we can see the scripts used for the 2021 annual report. First is a script used to take the raw monthly receipts and produce the _cleaned_ version of the same data set that we saw earlier. This is followed by a trend analysis of this cleaned data set. 
 
-Similarly for the spending review we have a data cleaning step, followed by some forecast modelling and finally the production of some diagnostic plots to compare these
-forecasts. 
+Similarly for the spending review we have a data cleaning step, followed by some forecast modelling and finally the production of some diagnostic plots to compare these forecasts. 
 
 
 ### outputs
 
-```{r outputs-image, echo = FALSE, out.width="80%"}
+```{r outputs-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-26.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -298,16 +279,14 @@ Depending on the nature of your project, you might want to use a modified subdir
 
 ### reports 
 
-```{r reports-image, echo = FALSE, out.width="80%"}
+```{r reports-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-29.png"
 knitr::include_graphics(path = image_path)
 ``` 
 
-The reports directory is then where everything comes together. This is where the written documents that form the final deliverables of your project are created. If these final documents are written in LaTeX or markdown, both the source and
-the compiled documents can be found within this directory. 
+The reports directory is then where everything comes together. This is where the written documents that form the final deliverables of your project are created. If these final documents are written in LaTeX or markdown, both the source and the compiled documents can be found within this directory. 
 
-When including content in this report, for example figures, I'd recommend against
-making copies of those figure files within the reports directory. If you do that, then you'll have to manually update the files every time you modify them. Instead you can use relative file paths to include these figures. Relative file paths specify how to get to the image, starting from your TeX document and moving up and down through the levels of your project directory. 
+When including content in this report, for example figures, I'd recommend against making copies of those figure files within the reports directory. If you do that, then you'll have to manually update the files every time you modify them. Instead you can use relative file paths to include these figures. Relative file paths specify how to get to the image, starting from your TeX document and moving up and down through the levels of your project directory. 
 
 If you're not using markdown or LaTeX to write your reports, but instead use an online platform like overleaf as a latex editor or Google docs to write collaboratively then links to them in the reports directory using additional readme files. Make sure you set the read and write permissions for those links appropriately, too. 
 
@@ -317,7 +296,7 @@ In our exciting new project, here we can see that the annual report is written i
 
 ### make file 
 
-```{r make-image, echo = FALSE, out.width="80%"}
+```{r make-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-32.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -336,7 +315,7 @@ Wrapping up then, that's everything for this chapter.
 
 I've introduced a project structure that will serve you well as a baseline for the vast majority of projects in data science. 
 
-```{r project-structure-final-image, echo = FALSE, out.width="80%"}
+```{r project-structure-final-image}
 image_path <- "images/101-workflows-organising-your-work/directory-structure-drawings/directory-structure-drawing-33.png"
 knitr::include_graphics(path = image_path)
 ``` 
@@ -344,6 +323,5 @@ knitr::include_graphics(path = image_path)
 In your own work, remember that the key here is standardisation. Working consistently across projects, a company or a group is more important than sticking rigidly to the particular structure that I have defined here. 
 
 There are two notable exceptions where you probably don't want to use this project structure. That's when you're building an app or you're building a package. These require specific organisation of the files within your project directory. We'll
-explore the project structure used for package development during the live
-session this week. 
+explore the project structure used for package development during the live session this week. 
 
